feat: enhance help dialog search

--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
       <button id="closeHelp">Close</button>
       <h2 id="helpTitle">How to use</h2>
       <input type="text" id="helpSearch" placeholder="Search..." aria-label="Search help" />
+      <p id="helpNoResults" hidden>No results found.</p>
       <div id="helpSections">
         <section data-help-section id="featuresOverview">
           <h3><span class="help-icon" aria-hidden="true">✨</span>Features at a Glance</h3>
