Translate skip link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <a href="#mainContent" class="skip-link">Skip to content</a>
+  <a href="#mainContent" class="skip-link" id="skipLink">Skip to content</a>
   <div id="langSelector">
     <select id="languageSelect">
       <option value="en">English</option>
