feat: add clear current setup button

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
       <input type="text" id="setupName" placeholder="Setup name" />
       <button id="saveSetupBtn">Save</button>
     </div>
+    <div class="form-row">
+      <button id="clearSetupBtn">Clear Current Setup</button>
+    </div>
 
     <!-- Moved Setup Actions here -->
     <h3 id="setupActionsHeading">Setup Actions</h3>
