--- a/index.html
+++ b/index.html
@@ -321,6 +321,10 @@
         <input type="checkbox" id="monitorWirelessTx" />
       </div>
       <div class="form-row">
+        <label for="monitorLatency" id="monitorLatencyLabel">Latency:</label>
+        <input type="text" id="monitorLatency" />
+      </div>
+      <div class="form-row">
         <label for="monitorAudioOutput" id="monitorAudioOutputLabel">Audio Output:</label>
         <input type="text" id="monitorAudioOutput" />
       </div>
