Add temperature runtime note

--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
     <p><strong><span id="totalCurrent12Label">Total Current (at 12V):</span></strong> <span id="totalCurrent12">0.00</span> A</p>
     <p><strong><span id="batteryLifeLabel">Runtime (estimated):</span></strong> <span id="batteryLife">0.00</span> <span id="batteryLifeUnit">hrs</span></p>
     <p id="pinWarning" role="status" aria-live="polite" aria-describedby="batteryLabel"></p>
-  <p id="dtapWarning" role="status" aria-live="polite" aria-describedby="batteryLabel"></p>
+    <p id="dtapWarning" role="status" aria-live="polite" aria-describedby="batteryLabel"></p>
+    <div id="temperatureNote"></div>
   </section>
 
   <section id="setupDiagram">
