Clarify battery count and temperature in help dialog

--- a/index.html
+++ b/index.html
@@ -530,7 +530,8 @@
         <section data-help-section id="powerCalculator">
           <h3><span class="help-icon" aria-hidden="true">⚡</span>Power Calculator</h3>
           <ul>
-            <li>Select a battery to see estimated runtime and current draw.</li>
+            <li>Select a battery to see estimated runtime, current draw and required batteries for a 10&nbsp;h shoot (incl. spare).</li>
+            <li>A temperature note helps account for runtime changes in hot or cold conditions.</li>
             <li>Warnings appear if the configuration exceeds battery output limits.</li>
             <li>The optional <strong>Battery Comparison</strong> panel shows runtimes for all batteries at once.</li>
           </ul>
