feat: add runtime feedback button

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
     <p id="pinWarning" role="status" aria-live="polite" aria-describedby="batteryLabel"></p>
     <p id="dtapWarning" role="status" aria-live="polite" aria-describedby="batteryLabel"></p>
     <div id="temperatureNote"></div>
+    <button id="runtimeFeedbackBtn" type="button">Submit User Runtime Feedback</button>
   </section>
 
   <section id="setupDiagram">
