--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
     <p id="dtapWarning" role="status" aria-live="polite" aria-describedby="batteryLabel"></p>
     <div id="temperatureNote"></div>
     <button id="runtimeFeedbackBtn" type="button">Submit User Runtime Feedback</button>
+    <div id="feedbackTableContainer">
+      <table id="userFeedbackTable" class="hidden"></table>
+    </div>
   </section>
 
   <section id="setupDiagram">
@@ -677,6 +680,40 @@
     </div>
   </div>
 
+  <dialog id="feedbackDialog">
+    <form id="feedbackForm" method="dialog">
+      <h3>User Runtime Feedback</h3>
+      <div class="form-row"><label>Username:<input type="text" id="fbUsername" required></label></div>
+      <div class="form-row"><label>Date:<input type="date" id="fbDate" required></label></div>
+      <div class="form-row"><label>Location:<input type="text" id="fbLocation"></label></div>
+      <div class="form-row"><label>Camera:<input type="text" id="fbCamera"></label></div>
+      <div class="form-row"><label>Battery Plate:<input type="text" id="fbBatteryPlate"></label></div>
+      <div class="form-row"><label>Lens Mount:<input type="text" id="fbLensMount"></label></div>
+      <div class="form-row"><label>Resolution:<input type="text" id="fbResolution"></label></div>
+      <div class="form-row"><label>Codec:<input type="text" id="fbCodec"></label></div>
+      <div class="form-row"><label>Framerate:<input type="text" id="fbFramerate"></label></div>
+      <div class="form-row"><label>Camera WIFI:<select id="fbWifi"><option value="on">On</option><option value="off">Off</option></select></label></div>
+      <div class="form-row"><label>Firmware:<input type="text" id="fbFirmware"></label></div>
+      <div class="form-row"><label>Battery:<input type="text" id="fbBattery"></label></div>
+      <div class="form-row"><label>Battery Age:<input type="text" id="fbBatteryAge"></label></div>
+      <div class="form-row"><label>Wireless Video:<input type="text" id="fbWirelessVideo"></label></div>
+      <div class="form-row"><label>Monitor:<input type="text" id="fbMonitor"></label></div>
+      <div class="form-row"><label>Monitor Brightness:<input type="text" id="fbMonitorBrightness"></label></div>
+      <div class="form-row"><label>Lens:<input type="text" id="fbLens"></label></div>
+      <div class="form-row"><label>Lens Data:<input type="text" id="fbLensData"></label></div>
+      <div class="form-row"><label>FIZ Controllers:<input type="text" id="fbControllers"></label></div>
+      <div class="form-row"><label>FIZ Motors:<input type="text" id="fbMotors"></label></div>
+      <div class="form-row"><label>FIZ Distance:<input type="text" id="fbDistance"></label></div>
+      <div class="form-row"><label>Temperature:<input type="text" id="fbTemperature"></label></div>
+      <div class="form-row"><label>Humidity:<input type="text" id="fbHumidity"></label></div>
+      <div class="form-row"><label>Runtime (hrs):<input type="number" step="0.01" id="fbRuntime" required></label></div>
+      <div class="form-row"><label>Batteries Used per Day:<input type="number" id="fbBatteriesPerDay"></label></div>
+      <div class="form-row button-row">
+        <button type="submit" id="fbSubmit">Save &amp; Submit</button>
+        <button type="button" id="fbCancel">Cancel</button>
+      </div>
+    </form>
+  </dialog>
   <script src="data.js"></script>
   <script src="storage.js"></script>
   <script src="translations.js"></script>
