--- a/index.html
+++ b/index.html
@@ -683,36 +683,84 @@
   <dialog id="feedbackDialog">
     <form id="feedbackForm" method="dialog">
       <h3>User Runtime Feedback</h3>
-      <div class="form-row"><label>Username:<input type="text" id="fbUsername" required></label></div>
-      <div class="form-row"><label>Date:<input type="date" id="fbDate" required></label></div>
-      <div class="form-row"><label>Location:<input type="text" id="fbLocation"></label></div>
-      <div class="form-row"><label>Camera:<input type="text" id="fbCamera"></label></div>
-      <div class="form-row"><label>Battery Plate:<input type="text" id="fbBatteryPlate"></label></div>
-      <div class="form-row"><label>Lens Mount:<input type="text" id="fbLensMount"></label></div>
-      <div class="form-row"><label>Resolution:<input type="text" id="fbResolution"></label></div>
-      <div class="form-row"><label>Codec:<input type="text" id="fbCodec"></label></div>
-      <div class="form-row"><label>Framerate:<input type="text" id="fbFramerate"></label></div>
-      <div class="form-row"><label>Camera WIFI:<select id="fbWifi"><option value="on">On</option><option value="off">Off</option></select></label></div>
-      <div class="form-row"><label>Firmware:<input type="text" id="fbFirmware"></label></div>
-      <div class="form-row"><label>Battery:<input type="text" id="fbBattery"></label></div>
-      <div class="form-row"><label>Battery Age:<input type="text" id="fbBatteryAge"></label></div>
-      <div class="form-row"><label>Wireless Video:<input type="text" id="fbWirelessVideo"></label></div>
-      <div class="form-row"><label>Monitor:<input type="text" id="fbMonitor"></label></div>
-      <div class="form-row"><label>Monitor Brightness:<input type="text" id="fbMonitorBrightness"></label></div>
-      <div class="form-row"><label>Lens:<input type="text" id="fbLens"></label></div>
-      <div class="form-row"><label>Lens Data:<input type="text" id="fbLensData"></label></div>
-      <div class="form-row"><label>FIZ Controllers:<input type="text" id="fbControllers"></label></div>
-      <div class="form-row"><label>FIZ Motors:<input type="text" id="fbMotors"></label></div>
-      <div class="form-row"><label>FIZ Distance:<input type="text" id="fbDistance"></label></div>
-      <div class="form-row"><label>Temperature:<input type="text" id="fbTemperature"></label></div>
-      <div class="form-row"><label>Humidity:<input type="text" id="fbHumidity"></label></div>
-      <div class="form-row"><label>Runtime (hrs):<input type="number" step="0.01" id="fbRuntime" required></label></div>
-      <div class="form-row"><label>Batteries Used per Day:<input type="number" id="fbBatteriesPerDay"></label></div>
+
+      <fieldset>
+        <legend>📋 Basic Info</legend>
+        <div class="form-row"><label>Username:<input type="text" id="fbUsername" required></label></div>
+        <div class="form-row"><label>Date:<input type="date" id="fbDate" required></label></div>
+        <div class="form-row"><label>Location:<input type="text" id="fbLocation"></label></div>
+      </fieldset>
+
+      <fieldset>
+        <legend>🎥 Camera Setup</legend>
+        <div class="form-row"><label>Camera:<input type="text" id="fbCamera"></label></div>
+        <div class="form-row"><label>Battery Plate:<input type="text" id="fbBatteryPlate"></label></div>
+        <div class="form-row"><label>Lens Mount:<input list="mountOptions" id="fbLensMount"></label></div>
+        <div class="form-row"><label>Resolution:<input list="resolutionOptions" id="fbResolution"></label></div>
+        <div class="form-row"><label>Codec:<input list="codecOptions" id="fbCodec"></label></div>
+        <div class="form-row"><label>Framerate:<input list="framerateOptions" id="fbFramerate"></label></div>
+        <div class="form-row"><label>Camera WIFI:<select id="fbWifi"><option value="on">On</option><option value="off">Off</option></select></label></div>
+        <div class="form-row"><label>Firmware:<input type="text" id="fbFirmware"></label></div>
+      </fieldset>
+
+      <fieldset>
+        <legend>🔋 Power &amp; Accessories</legend>
+        <div class="form-row"><label>Battery:<input type="text" id="fbBattery"></label></div>
+        <div class="form-row"><label>Battery Age:<input type="number" id="fbBatteryAge"></label></div>
+        <div class="form-row"><label>Wireless Video:<input type="text" id="fbWirelessVideo"></label></div>
+        <div class="form-row"><label>Monitor:<input type="text" id="fbMonitor"></label></div>
+        <div class="form-row"><label>Monitor Brightness:<input type="text" id="fbMonitorBrightness"></label></div>
+        <div class="form-row"><label>Lens:<input type="text" id="fbLens"></label></div>
+        <div class="form-row"><label>Lens Data:<select id="fbLensData"><option value="">--</option><option value="on">On</option><option value="off">Off</option></select></label></div>
+        <div class="form-row"><label>FIZ Controllers:<input type="text" id="fbControllers"></label></div>
+        <div class="form-row"><label>FIZ Motors:<input type="text" id="fbMotors"></label></div>
+        <div class="form-row"><label>FIZ Distance:<select id="fbDistance"></select></label></div>
+      </fieldset>
+
+      <fieldset>
+        <legend>🌡️ Environment</legend>
+        <div class="form-row"><label>Temperature:<input type="text" id="fbTemperature"></label></div>
+        <div class="form-row"><label>Humidity:<input type="text" id="fbHumidity"></label></div>
+        <div class="form-row"><label>Runtime (hrs):<input type="number" step="0.01" id="fbRuntime" required></label></div>
+        <div class="form-row"><label>Batteries Used per Day:<input type="number" id="fbBatteriesPerDay"></label></div>
+      </fieldset>
+
       <div class="form-row button-row">
         <button type="submit" id="fbSubmit">Save &amp; Submit</button>
         <button type="button" id="fbCancel">Cancel</button>
       </div>
     </form>
+
+    <datalist id="mountOptions">
+      <option value="PL"></option>
+      <option value="EF"></option>
+      <option value="E"></option>
+      <option value="MFT"></option>
+      <option value="RF"></option>
+    </datalist>
+    <datalist id="resolutionOptions">
+      <option value="1080p"></option>
+      <option value="2K"></option>
+      <option value="4K"></option>
+      <option value="6K"></option>
+      <option value="8K"></option>
+    </datalist>
+    <datalist id="codecOptions">
+      <option value="ProRes"></option>
+      <option value="BRAW"></option>
+      <option value="H.264"></option>
+      <option value="H.265"></option>
+      <option value="XAVC"></option>
+    </datalist>
+    <datalist id="framerateOptions">
+      <option value="23.98"></option>
+      <option value="24"></option>
+      <option value="25"></option>
+      <option value="30"></option>
+      <option value="50"></option>
+      <option value="60"></option>
+      <option value="120"></option>
+    </datalist>
   </dialog>
   <script src="data.js"></script>
   <script src="storage.js"></script>
