Improve runtime feedback table formatting

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <p id="dtapWarning" role="status" aria-live="polite" aria-describedby="batteryLabel"></p>
     <div id="temperatureNote"></div>
     <button id="runtimeFeedbackBtn" type="button">Submit User Runtime Feedback</button>
-    <div id="feedbackTableContainer">
+    <div id="feedbackTableContainer" class="hidden">
       <table id="userFeedbackTable" class="hidden"></table>
     </div>
   </section>
