--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
 
       <fieldset>
         <legend>📋 Basic Info</legend>
-        <div class="form-row"><label>Username:<input type="text" id="fbUsername" required></label></div>
+        <div class="form-row"><label>User:<input type="text" id="fbUsername" required></label></div>
         <div class="form-row"><label>Date:<input type="date" id="fbDate" required></label></div>
         <div class="form-row"><label>Location:<input type="text" id="fbLocation"></label></div>
       </fieldset>
@@ -696,9 +696,9 @@
         <div class="form-row"><label>Camera:<input type="text" id="fbCamera"></label></div>
         <div class="form-row"><label>Battery Plate:<input type="text" id="fbBatteryPlate"></label></div>
         <div class="form-row"><label>Lens Mount:<input list="mountOptions" id="fbLensMount"></label></div>
-        <div class="form-row"><label>Resolution:<input list="resolutionOptions" id="fbResolution"></label></div>
+        <div class="form-row"><label>Res:<input list="resolutionOptions" id="fbResolution"></label></div>
         <div class="form-row"><label>Codec:<input list="codecOptions" id="fbCodec"></label></div>
-        <div class="form-row"><label>Framerate:<input list="framerateOptions" id="fbFramerate"></label></div>
+        <div class="form-row"><label>FPS:<input list="framerateOptions" id="fbFramerate"></label></div>
         <div class="form-row"><label>Camera WIFI:<select id="fbWifi"><option value="on">On</option><option value="off">Off</option></select></label></div>
         <div class="form-row"><label>Firmware:<input type="text" id="fbFirmware"></label></div>
       </fieldset>
@@ -719,8 +719,9 @@
 
       <fieldset>
         <legend>🌡️ Environment</legend>
-        <div class="form-row"><label>Temperature:<input type="text" id="fbTemperature"></label></div>
+        <div class="form-row"><label>Temp:<input type="text" id="fbTemperature"></label></div>
         <div class="form-row"><label>Humidity:<input type="text" id="fbHumidity"></label></div>
+        <div class="form-row"><label>Charging:<select id="fbCharging"><option value="yes">Yes</option><option value="no">No</option></select></label></div>
         <div class="form-row"><label>Runtime (hrs):<input type="number" step="0.01" id="fbRuntime" required></label></div>
         <div class="form-row"><label>Batteries Used per Day:<input type="number" id="fbBatteriesPerDay"></label></div>
       </fieldset>
