feat: add shareable setup links

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <button id="importSetupsBtn">Import Setups</button>
     <input type="file" id="importSetupsInput" accept=".json" class="hidden" />
     <button id="generateOverviewBtn">Generate Overview</button>
+    <button id="shareSetupBtn">Share Setup Link</button>
     <button id="clearSetupBtn">Clear Current Setup</button>
   </section>
 
