Add button to autofill location from current position

--- a/index.html
+++ b/index.html
@@ -689,7 +689,10 @@
         <legend>📋 Basic Info</legend>
         <div class="form-row"><label>User:<input type="text" id="fbUsername" required></label></div>
         <div class="form-row"><label>Date:<input type="date" id="fbDate" required></label></div>
-        <div class="form-row"><label>Location:<input type="text" id="fbLocation"></label></div>
+        <div class="form-row">
+          <label>Location:<input type="text" id="fbLocation"></label>
+          <button type="button" id="fbUseLocationBtn">Use Current Location</button>
+        </div>
       </fieldset>
 
       <fieldset>
