--- a/index.html
+++ b/index.html
@@ -723,8 +723,8 @@
 
       <fieldset>
         <legend>🌡️ Environment</legend>
-        <div class="form-row"><label>Temp (°C):<input type="text" id="fbTemperature"></label></div>
-        <div class="form-row"><label>Humidity:<input type="text" id="fbHumidity"></label></div>
+        <div class="form-row"><label>Temp (°C):<select id="fbTemperature"></select></label></div>
+        <div class="form-row"><label>Humidity:<select id="fbHumidity"></select></label></div>
         <div class="form-row"><label>Charging:<select id="fbCharging"><option value="yes">Yes</option><option value="no">No</option></select></label></div>
         <div class="form-row"><label>Runtime (hrs):<input type="number" step="0.01" id="fbRuntime" required></label></div>
         <div class="form-row"><label>Batteries Used per Day:<input type="number" id="fbBatteriesPerDay"></label></div>
