Weigh runtime factors by device power share

--- a/index.html
+++ b/index.html
@@ -751,11 +751,28 @@
       <option value="8K"></option>
     </datalist>
     <datalist id="codecOptions">
-      <option value="ProRes"></option>
+      <option value="ARRIRAW"></option>
       <option value="BRAW"></option>
+      <option value="Canon RAW"></option>
+      <option value="CinemaDNG"></option>
+      <option value="R3D"></option>
+      <option value="ProRes RAW"></option>
+      <option value="ProRes"></option>
+      <option value="DNxHD"></option>
+      <option value="DNxHR"></option>
+      <option value="DNxHQ"></option>
+      <option value="XAVC-I"></option>
+      <option value="XAVC-L"></option>
+      <option value="XAVC-S"></option>
+      <option value="XAVC HS"></option>
       <option value="H.264"></option>
+      <option value="H.264 All-I"></option>
       <option value="H.265"></option>
-      <option value="XAVC"></option>
+      <option value="H.265 All-I"></option>
+      <option value="AVC-Intra"></option>
+      <option value="AVCHD"></option>
+      <option value="HEVC"></option>
+      <option value="X-OCN"></option>
     </datalist>
     <datalist id="framerateOptions">
       <option value="23.98"></option>
