docs: document weighted runtime feature

--- a/index.html
+++ b/index.html
@@ -547,6 +547,7 @@
             <li>Each device contributes its power draw in watts to <em>Total Consumption</em>.</li>
             <li>Current at 14.4 V (33.6 V for B‑Mount) and 12 V (21.6 V for B‑Mount) equals total watts divided by voltage.</li>
             <li>Runtime&nbsp;=&nbsp;battery capacity (Wh)&nbsp;÷&nbsp;total consumption.</li>
+            <li>User-submitted runtimes are weighted by camera settings, monitor brightness and temperature before averaging.</li>
             <li>Warnings highlight when current approaches or exceeds main or D‑Tap output ratings.</li>
           </ul>
         </section>
