--- a/index.html
+++ b/index.html
@@ -510,10 +510,12 @@
           <ul>
             <li>Plan complete camera rigs and compute power draw and battery life.</li>
             <li>Save multiple setups, export or import them and print overviews.</li>
-            <li>Visualize power and video connections with interactive diagrams.</li>
+            <li>Visualize power and video connections with an interactive diagram—drag to rearrange, zoom and download the layout.</li>
             <li>Compare battery runtimes and check against safe output limits.</li>
             <li>Customize the device database with your own gear.</li>
+            <li>Open a searchable help dialog with step-by-step guides and FAQ.</li>
             <li>Switch languages, toggle dark or playful pink themes and work fully offline. Theme settings persist.</li>
+            <li>Cameras with both V- and B-Mount plates let you swap battery types; the list updates automatically.</li>
           </ul>
         </section>
         <section data-help-section id="gettingStarted">
@@ -555,8 +557,9 @@
           <h3><span class="help-icon" aria-hidden="true">🗺️</span>Setup Diagram</h3>
           <ul>
             <li>Visualizes power and video connections between selected devices.</li>
+            <li>Drag nodes to rearrange the layout; use +/– buttons to zoom.</li>
+            <li>Export the diagram as SVG or JPG via the <em>Download</em> button.</li>
             <li>Icons denote device types and warn when FIZ brands are incompatible.</li>
-            <li>Drag nodes to rearrange, use +/– buttons to zoom and click <em>Download</em> to save the image.</li>
             <li>Hover or tap devices to see popup details.</li>
           </ul>
         </section>
@@ -589,6 +592,14 @@
             <li>The help dialog itself is searchable using the field at the top.</li>
           </ul>
         </section>
+        <section data-help-section id="helpDialogHelp">
+          <h3><span class="help-icon" aria-hidden="true">❓</span>Help Dialog</h3>
+          <ul>
+            <li>Open with the <strong>?</strong> button or press <kbd>?</kbd>, <kbd>H</kbd> or <kbd>F1</kbd>.</li>
+            <li>Use the search field to filter topics; the query resets when closed.</li>
+            <li>Close the dialog with <kbd>Escape</kbd> or by clicking outside.</li>
+          </ul>
+        </section>
         <section data-help-section id="darkModeHelp">
           <h3><span class="help-icon" aria-hidden="true">🌓</span>Dark Mode</h3>
           <ul>
@@ -599,8 +610,8 @@
         <section data-help-section id="pinkModeHelp">
           <h3><span class="help-icon" aria-hidden="true">🦄</span>Pink Mode</h3>
           <ul>
-            <li>Click the horse button for a pink unicorn theme.</li>
-            <li>The setting persists between visits.</li>
+            <li>Click the horse button for a pink unicorn theme that accents buttons and headings.</li>
+            <li>The setting persists between visits and works in light or dark mode.</li>
           </ul>
         </section>
         <section data-help-section id="shortcuts">
