--- a/index.html
+++ b/index.html
@@ -549,7 +549,21 @@
             <li>Each device contributes its power draw in watts to <em>Total Consumption</em>.</li>
             <li>Current at 14.4 V (33.6 V for B‑Mount) and 12 V (21.6 V for B‑Mount) equals total watts divided by voltage.</li>
             <li>Runtime&nbsp;=&nbsp;battery capacity (Wh)&nbsp;÷&nbsp;total consumption.</li>
-            <li>User-submitted runtimes are weighted by camera settings, monitor brightness and temperature before averaging.</li>
+            <li>
+              User-submitted runtimes are adjusted for temperature and weighted before
+              averaging:
+              <ul>
+                <li>Temperature: ×2 at ≤−20 °C, ×1.6 at ≤−10 °C, ×1.25 at ≤0 °C.</li>
+                <li>Resolution: ≥12K ×3, ≥8K ×2, ≥4K ×1.5, ≥1080p ×1; lower scales with 1080p.</li>
+                <li>Frame rate scales linearly from 24 fps (e.g. 48 fps = ×2).</li>
+                <li>Wi‑Fi adds 10 %; monitor entries below spec are weighted by their brightness ratio.</li>
+                <li>
+                  Codec factors: RAW/BRAW/ARRIRAW/R3D/CinemaDNG/Canon RAW/X‑OCN ×1;
+                  ProRes ×1.1; DNx/AVID ×1.2; All‑Intra ×1.3; H.264/AVC ×1.5; H.265/HEVC ×1.7.
+                </li>
+                <li>The final weight reflects each device's share of total power draw.</li>
+              </ul>
+            </li>
             <li>Warnings highlight when current approaches or exceeds main or D‑Tap output ratings.</li>
           </ul>
         </section>
