Update help, readme and translations

--- a/index.html
+++ b/index.html
@@ -531,6 +531,8 @@
           <ul>
             <li>Use <strong>Save</strong> to store the current configuration in your browser.</li>
             <li>Import, export or delete setups via the <em>Setup Actions</em> section.</li>
+            <li><strong>Share Setup Link</strong> copies a URL for the current configuration.</li>
+            <li><strong>Clear Current Setup</strong> removes all selected devices.</li>
             <li><strong>Generate Overview</strong> produces a printable summary of any saved setup.</li>
           </ul>
         </section>
