--- a/index.html
+++ b/index.html
@@ -815,6 +815,7 @@
   <script src="data.js"></script>
   <script src="storage.js"></script>
   <script src="translations.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lz-string@1.5.0/libs/lz-string.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
