docs: document battery comparison and language switch

--- a/index.html
+++ b/index.html
@@ -616,6 +616,13 @@
             <li>Close the dialog with <kbd>Escape</kbd> or by clicking outside.</li>
           </ul>
         </section>
+        <section data-help-section id="languageHelp">
+          <h3><span class="help-icon" aria-hidden="true">🌐</span>Language</h3>
+          <ul>
+            <li>Use the dropdown in the top right to switch languages.</li>
+            <li>Your choice is remembered for the next visit.</li>
+          </ul>
+        </section>
         <section data-help-section id="darkModeHelp">
           <h3><span class="help-icon" aria-hidden="true">🌓</span>Dark Mode</h3>
           <ul>
