Document runtime feedback feature

--- a/index.html
+++ b/index.html
@@ -569,6 +569,14 @@
             <li>Warnings highlight when current approaches or exceeds main or D‑Tap output ratings.</li>
           </ul>
         </section>
+        <section data-help-section id="runtimeFeedbackHelp">
+          <h3><span class="help-icon" aria-hidden="true">📝</span>User Runtime Feedback</h3>
+          <ul>
+            <li>Click <strong>Submit User Runtime Feedback</strong> below the runtime to add your own measurement.</li>
+            <li>Include temperature and humidity for more accurate weighting.</li>
+            <li>Your entries are stored locally and refine the runtime estimate.</li>
+          </ul>
+        </section>
         <section data-help-section id="setupDiagramHelp">
           <h3><span class="help-icon" aria-hidden="true">🗺️</span>Setup Diagram</h3>
           <ul>
