feat: add diagram grid snap toggle

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
       <button id="zoomOut" type="button" title="Zoom out" aria-label="Zoom out">-</button>
       <button id="zoomIn" type="button" title="Zoom in" aria-label="Zoom in">+</button>
       <button id="downloadDiagram" type="button">Download Diagram</button>
+      <button id="gridSnapToggle" type="button">Snap to Grid</button>
     </div>
     <p id="diagramHint" class="diagram-hint"></p>
   </section>
