Add basic PWA support with service worker

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <meta property="og:description" content="Plan your camera setup and calculate power consumption &amp; battery life." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="favicon.ico" />
+  <meta name="theme-color" content="#ffffff" />
   <title>Camera Power Planner</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 <body>
   <a href="#mainContent" class="skip-link" id="skipLink">Skip to content</a>
