Document PWA installation

--- a/index.html
+++ b/index.html
@@ -695,7 +695,13 @@
           </details>
           <details class="faq-item">
             <summary>Can I install the planner as an app?</summary>
-            <p>Most browsers offer an <em>Install</em> or <em>Add to Home Screen</em> option in the address bar or menu. The installed version runs offline and updates automatically.</p>
+            <p>You can install the planner like an app on most platforms:</p>
+            <ul>
+              <li><strong>Chrome/Edge (desktop):</strong> Click the install icon in the address bar.</li>
+              <li><strong>Android:</strong> Open the browser menu and choose <em>Add to Home Screen</em>.</li>
+              <li><strong>iOS/iPadOS Safari:</strong> Tap the <em>Share</em> button and select <em>Add to Home Screen</em>.</li>
+              <li>After installation it runs offline and updates automatically.</li>
+            </ul>
           </details>
           <details class="faq-item">
             <summary>How do I reset everything to the defaults?</summary>
