Add clear button to help search

--- a/index.html
+++ b/index.html
@@ -512,7 +512,10 @@
     <div class="help-content">
       <button id="closeHelp">Close</button>
       <h2 id="helpTitle">How to use</h2>
-      <input type="text" id="helpSearch" placeholder="Search help topics..." aria-label="Search help topics" />
+      <div id="helpSearchContainer">
+        <input type="text" id="helpSearch" placeholder="Search help topics..." aria-label="Search help topics" />
+        <button id="helpSearchClear" type="button" aria-label="Clear search" title="Clear search" hidden>&times;</button>
+      </div>
       <p id="helpNoResults" aria-live="polite" hidden>No results found.</p>
       <div id="helpSections">
         <section data-help-section id="featuresOverview">
