Add hover for help mode

--- a/index.html
+++ b/index.html
@@ -516,6 +516,7 @@
         <input type="text" id="helpSearch" placeholder="Search help topics..." aria-label="Search help topics" />
         <button id="helpSearchClear" type="button" aria-label="Clear search" title="Clear search" hidden>&times;</button>
       </div>
+      <button id="hoverHelpButton" type="button">Hover for help</button>
       <p id="helpNoResults" aria-live="polite" hidden>No results found.</p>
       <div id="helpSections">
         <section data-help-section id="featuresOverview">
