Mention F1 for help toggle

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </select>
     <button id="darkModeToggle" title="Toggle dark mode" aria-label="Toggle dark mode" aria-pressed="false">🌙</button>
     <button id="pinkModeToggle" title="Toggle pink mode" aria-label="Toggle pink mode" aria-pressed="false">🐴</button>
-    <button id="helpButton" aria-haspopup="dialog" aria-controls="helpDialog" title="Help (press ? or H)">?</button>
+    <button id="helpButton" aria-haspopup="dialog" aria-controls="helpDialog" title="Help (press ?, H or F1)">?</button>
   </div>
 
   <main id="mainContent">
