chore: drop bundled fonts

--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
   <meta property="og:image" content="icon.png" />
   <meta name="theme-color" content="#1a1a1a" />
   <title>Camera Power Planner</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="overview-print.css" media="print" />
   <link rel="icon" href="icon.svg" type="image/svg+xml" />
@@ -860,7 +857,7 @@
   <script src="data.js"></script>
   <script src="storage.js"></script>
   <script src="translations.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/lz-string@1.5.0/libs/lz-string.min.js"></script>
+  <script src="lz-string.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
