Focus main content when using skip link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <button id="helpButton" aria-haspopup="dialog" aria-controls="helpDialog" title="Help (press ?, H or F1)">?</button>
   </div>
 
-  <main id="mainContent">
+  <main id="mainContent" tabindex="-1">
 
   <h1 id="mainTitle">Camera Power Consumption App</h1>
   <p id="tagline">Plan your camera setup and calculate power consumption &amp; battery life.</p>
