Add reload cache helper button

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <button id="darkModeToggle" title="Toggle dark mode" aria-label="Toggle dark mode" aria-pressed="false">🌙</button>
       <button id="pinkModeToggle" title="Toggle pink mode" aria-label="Toggle pink mode" aria-pressed="false">🐴</button>
       <button id="helpButton" aria-haspopup="dialog" aria-controls="helpDialog" title="Help (press ?, H, F1 or Ctrl+/)">?</button>
+      <button id="reloadButton" title="Force reload" aria-label="Force reload">🔄</button>
     </div>
   </header>
 
