feat: add MVF-1 viewfinder category

--- a/index.html
+++ b/index.html
@@ -498,6 +498,11 @@
         <ul id="cameraList" class="device-ul"></ul>
       </div>
       <div class="device-category">
+        <h4 id="category_viewfinders">Viewfinders</h4>
+        <input type="search" id="viewfinderListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+        <ul id="viewfinderList" class="device-ul"></ul>
+      </div>
+      <div class="device-category">
         <h4 id="category_monitors">Monitors</h4>
         <input type="search" id="monitorListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
         <ul id="monitorList" class="device-ul"></ul>
