Enhance gear list form inputs

--- a/index.html
+++ b/index.html
@@ -810,30 +810,61 @@
           <option value=""></option>
           <option value="720p">720p</option>
           <option value="1080p">1080p</option>
+          <option value="1440p">1440p</option>
           <option value="2K">2K</option>
+          <option value="2.7K">2.7K</option>
           <option value="3.2K UHD">3.2K UHD</option>
           <option value="4K">4K</option>
+          <option value="4.5K">4.5K</option>
           <option value="5K">5K</option>
+          <option value="5.7K">5.7K</option>
           <option value="6K">6K</option>
+          <option value="7K">7K</option>
           <option value="8K">8K</option>
+          <option value="9K">9K</option>
           <option value="12K">12K</option>
+          <option value="16K">16K</option>
         </select></label></div>
       <div class="form-row"><label for="recordingResolution">Recording Resolution:<select id="recordingResolution" name="recordingResolution">
           <option value=""></option>
           <option value="720p">720p</option>
           <option value="1080p">1080p</option>
+          <option value="1440p">1440p</option>
           <option value="2K">2K</option>
+          <option value="2.7K">2.7K</option>
           <option value="3.2K UHD">3.2K UHD</option>
           <option value="4K">4K</option>
+          <option value="4.5K">4.5K</option>
           <option value="5K">5K</option>
+          <option value="5.7K">5.7K</option>
           <option value="6K">6K</option>
+          <option value="7K">7K</option>
           <option value="8K">8K</option>
+          <option value="9K">9K</option>
           <option value="12K">12K</option>
+          <option value="16K">16K</option>
         </select></label></div>
-      <div class="form-row"><label for="aspectRatio">Aspect Ratio:<input type="text" id="aspectRatio" name="aspectRatio"></label></div>
+      <div class="form-row"><label for="aspectRatio">Aspect Ratio:<select id="aspectRatio" name="aspectRatio">
+          <option value=""></option>
+          <option value="16:9">16:9</option>
+          <option value="17:9">17:9</option>
+          <option value="4:3">4:3</option>
+          <option value="1.85:1">1.85:1</option>
+          <option value="2.39:1">2.39:1</option>
+        </select></label></div>
       <div class="form-row"><label for="codec">Codec:<input type="text" id="codec" name="codec"></label></div>
-      <div class="form-row"><label for="baseFrameRate">Base Frame Rate:<input type="text" id="baseFrameRate" name="baseFrameRate"></label></div>
-      <div class="form-row"><label for="lenses">Lenses:<input type="text" id="lenses" name="lenses"></label></div>
+      <div class="form-row"><label for="baseFrameRate">Base Frame Rate:<select id="baseFrameRate" name="baseFrameRate">
+          <option value=""></option>
+          <option value="23.976">23.976</option>
+          <option value="24">24</option>
+          <option value="25">25</option>
+          <option value="29.97">29.97</option>
+          <option value="30">30</option>
+          <option value="50">50</option>
+          <option value="59.94">59.94</option>
+          <option value="60">60</option>
+        </select></label></div>
+      <div class="form-row"><label for="lenses">Lenses:<select id="lenses" name="lenses"></select></label></div>
       <div class="form-row"><label for="requiredScenarios">What required scenarios do we have for this shoot?
         <select id="requiredScenarios" name="requiredScenarios" multiple size="25">
           <option value="Indoor">Indoor</option>
