Allow inline scripts in CSP

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="application-name" content="Camera Power Planner" />
   <meta name="apple-mobile-web-app-title" content="Camera Power Planner" />
   <!-- Enables features that rely on eval(); revisit if security requirements change -->
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval';" />
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval' 'unsafe-inline';" />
   <title>Camera Power Planner</title>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
