refactor: remove cage selection from device picker

--- a/index.html
+++ b/index.html
@@ -97,19 +97,14 @@
       </div>
       <div class="form-row">
         <label for="videoSelect" id="videoLabel">Wireless Video:</label>
-        <div class="select-wrapper">
+      <div class="select-wrapper">
           <input type="search" id="videoFilter" class="filter-input" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
           <select id="videoSelect" aria-labelledby="videoLabel"></select>
         </div>
       </div>
 
-      <div class="form-row">
-        <label for="cageSelect" id="cageLabel">Camera Cage:</label>
-        <div class="select-wrapper">
-          <input type="search" id="cageFilter" class="filter-input" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-          <select id="cageSelect" aria-labelledby="cageLabel"></select>
-        </div>
-      </div>
+      <!-- Hidden cage select maintained for gear list synchronization -->
+      <select id="cageSelect" hidden></select>
 
     <fieldset>
       <legend id="fizLegend">FIZ (Follow Focus) Systems</legend>
