Add missing device categories to editor

--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
       <label for="newCategory" id="categoryLabel">Category:</label>
       <select id="newCategory">
         <option value="cameras">Camera</option>
+        <option value="viewfinders">Viewfinder</option>
         <option value="monitors">Monitor</option>
         <option value="video">Wireless Video</option>
         <option value="fiz.motors">FIZ Motor</option>
@@ -234,6 +235,7 @@
         <option value="fiz.distance">FIZ Distance</option>
         <option value="fiz.cables">FIZ Cable</option>
         <option value="batteries">V-Mount Battery</option>
+        <option value="accessories.batteries">Accessory Battery</option>
         <option value="accessories.cages">Camera Support</option>
         <option value="accessories.chargers">Charger</option>
       </select>
